tests/snapshots/snapshots__pipeline@rank2.pr.snap
---
source: tests/snapshots.rs
expression: "normalize_pipeline_report(&prism::report(&src))"
input_file: tests/cases/rank2.pr
---
== tokens ==
VOpen Fn Ident("pick") LParen Ident("g") Colon Forall Ident("a") Dot LParen Ident("a") RParen Arrow Ident("a") RParen Colon KwInt Eq VOpen If Ident("g") LParen True RParen Then VOpen Ident("g") LParen Int(IntLit { value: 10, suffix: None }) RParen VClose VSemi Else VOpen Ident("g") LParen Int(IntLit { value: 20, suffix: None }) RParen VClose VClose VSemi Fn Ident("main") LParen RParen Eq Ident("println") LParen Ident("pick") LParen Lambda LParen Ident("x") RParen Arrow Ident("x") RParen RParen VClose

== ast ==
Program {
    types: [],
    effects: [],
    errors: [],
    aliases: [],
    classes: [],
    instances: [],
    fns: [
        Decl {
            name: "pick",
            params: [
                Param {
                    name: "g",
                    ty: Some(
                        Forall(
                            [
                                "a",
                            ],
                            Fun(
                                [
                                    Var(
                                        "a",
                                    ),
                                ],
                                Empty,
                                Var(
                                    "a",
                                ),
                            ),
                        ),
                    ),
                    borrow: false,
                    default: None,
                },
            ],
            ret: Some(
                Int,
            ),
            eff: None,
            constraints: [],
            body: Spanned {
                node: If(
                    Spanned {
                        node: Call(
                            Spanned {
                                node: Var(
                                    "g",
                                ),
                                span: 45..46,
                            },
                            [
                                Spanned {
                                    node: Bool(
                                        true,
                                    ),
                                    span: 47..51,
                                },
                            ],
                        ),
                        span: 45..52,
                    },
                    Spanned {
                        node: Call(
                            Spanned {
                                node: Var(
                                    "g",
                                ),
                                span: 62..63,
                            },
                            [
                                Spanned {
                                    node: Int(
                                        IntLit {
                                            value: 10,
                                            suffix: None,
                                        },
                                    ),
                                    span: 64..66,
                                },
                            ],
                        ),
                        span: 62..67,
                    },
                    Spanned {
                        node: Call(
                            Spanned {
                                node: Var(
                                    "g",
                                ),
                                span: 79..80,
                            },
                            [
                                Spanned {
                                    node: Int(
                                        IntLit {
                                            value: 20,
                                            suffix: None,
                                        },
                                    ),
                                    span: 81..83,
                                },
                            ],
                        ),
                        span: 79..84,
                    },
                ),
                span: 42..84,
            },
            wheres: [],
            span: 0..84,
        },
        Decl {
            name: "main",
            params: [],
            ret: None,
            eff: None,
            constraints: [],
            body: Spanned {
                node: Call(
                    Spanned {
                        node: Var(
                            "println",
                        ),
                        span: 98..105,
                    },
                    [
                        Spanned {
                            node: Call(
                                Spanned {
                                    node: Var(
                                        "pick",
                                    ),
                                    span: 106..110,
                                },
                                [
                                    Spanned {
                                        node: Lam(
                                            [
                                                Param {
                                                    name: "x",
                                                    ty: None,
                                                    borrow: false,
                                                    default: None,
                                                },
                                            ],
                                            Spanned {
                                                node: Var(
                                                    "x",
                                                ),
                                                span: 119..120,
                                            },
                                        ),
                                        span: 111..120,
                                    },
                                ],
                            ),
                            span: 106..121,
                        },
                    ],
                ),
                span: 98..122,
            },
            wheres: [],
            span: 86..122,
        },
    ],
}

== types ==
pick : (forall a. (a) -> a) -> Int
main : () -> Unit ! {IO}

== core (cbpv) ==
fn pick(g) =
  return true to t@0
  return g to t@1
  (force t@1)(t@0) to t@6
  if t@6 then
    return 10 to t@2
    return g to t@3
    (force t@3)(t@2)
  else
    return 20 to t@4
    return g to t@5
    (force t@5)(t@4)
fn main() =
  return thunk { \x. return x } to t@7
  pick(t@7) to t@8
  print t@8 to t@9
  print_nl

== fbip (rc) ==
fn pick(g) =
  dup g
  return true to t@0
  return g to t@1
  (force t@1)(t@0) to t@6
  if t@6 then
    drop t@6
    return 10 to t@2
    return g to t@3
    (force t@3)(t@2)
  else
    drop t@6
    return 20 to t@4
    return g to t@5
    (force t@5)(t@4)
fn main() =
  return thunk { \x. return x } to t@7
  pick(t@7) to t@8
  print t@8 to t@9
  drop t@9
  print_nl

== llvm ==
; ModuleID = 'prism'
source_filename = "prism"

@prism_native_kont_table = constant [798 x i8] c"scheme  prism-core-hash-v2\0Abundle  480ccc59a99611e643f7e49b8ef046c36637b34f9f028c9419ee265a3a87aa20\0Acompiler  <version>\0Atarget  <target>\0Abackend  llvm\0Aflag  source-root  prism-core-hash-v2:480ccc59a99611e643f7e49b8ef046c36637b34f9f028c9419ee265a3a87aa20\0Aflag  stdlib-root  <stdlib-root>\0Aflag  opt  O1\0Aflag  passes  level-default\0Aflag  disabled  none\0Aflag  backend-opt  2\0Aflag  scheduler  cooperative\0Aflag  effect-tier  auto\0Aflag  reify  true\0Aflag  erasures  true\0Aflag  native-effects  true\0Aflag  trampoline  true\0Aflag  fuse  false\0Aflag  borrow-infer  true\0Aflag  rt-checks  false\0Aflag  native-kont-frames  false\0Afn      prismfn_main  13aa7ea55c1d4c1ab9dc1aaeb0bc4f2a7bfde2859b43ed031c64b31ddd19aa9a  main\0Afn      prismfn_pick  fbb7da799ec12b795ed34fa492bc26c8e63e7a66689a5a0da67dfd5acee76887  pick\0A\00", section ",.prism_kont", align 1
@prism_native_kont_state_map = constant [902 x i8] c"state-map 1\0Ascheme  prism-core-hash-v2\0Abundle  480ccc59a99611e643f7e49b8ef046c36637b34f9f028c9419ee265a3a87aa20\0Acompiler  <version>\0Atarget  <target>\0Abackend  llvm\0Aflag  source-root  prism-core-hash-v2:480ccc59a99611e643f7e49b8ef046c36637b34f9f028c9419ee265a3a87aa20\0Aflag  stdlib-root  <stdlib-root>\0Aflag  opt  O1\0Aflag  passes  level-default\0Aflag  disabled  none\0Aflag  backend-opt  2\0Aflag  scheduler  cooperative\0Aflag  effect-tier  auto\0Aflag  reify  true\0Aflag  erasures  true\0Aflag  native-effects  true\0Aflag  trampoline  true\0Aflag  fuse  false\0Aflag  borrow-infer  true\0Aflag  rt-checks  false\0Aflag  native-kont-frames  false\0Aslot-format prism-native-abi-word-v1\0Astate prismfn_main 13aa7ea55c1d4c1ab9dc1aaeb0bc4f2a7bfde2859b43ed031c64b31ddd19aa9a main arity 0 slots abi-word[]\0Astate prismfn_pick fbb7da799ec12b795ed34fa492bc26c8e63e7a66689a5a0da67dfd5acee76887 pick arity 1 slots abi-word[arg0=%a0:word]\0A\00", section ",.prism_kont", align 1
@.kont_symbol0 = private constant [13 x i8] c"prismfn_main\00"
@.kont_hash0 = private constant [65 x i8] c"13aa7ea55c1d4c1ab9dc1aaeb0bc4f2a7bfde2859b43ed031c64b31ddd19aa9a\00"
@.kont_name0 = private constant [5 x i8] c"main\00"
@prism_native_kont_ptrs = constant [1 x { ptr, ptr, ptr, ptr }] [{ ptr, ptr, ptr, ptr } { ptr @prismfn_main, ptr @.kont_symbol0, ptr @.kont_hash0, ptr @.kont_name0 }], section ",.prism_kont", align 8
@prism_native_kont_ptrs_len = constant i64 1, section ",.prism_kont", align 8
@llvm.used = appending global [4 x ptr] [ptr @prism_native_kont_table, ptr @prism_native_kont_state_map, ptr @prism_native_kont_ptrs, ptr @prism_native_kont_ptrs_len], section ",llvm.metadata"

; Function Attrs: nounwind
define i64 @prismfn_main() #0 {
entry:
  %t1 = call ptr @prism_alloc(i64 0)
  %t2 = getelementptr inbounds i8, ptr %t1, i64 8
  store i64 4180332117194187166, ptr %t2, align 8
  %t4 = ptrtoint ptr %t1 to i64
  call void @prism_rc_inc(i64 %t4)
  %t7 = call i64 @prismap_1(i64 %t4, i64 3)
  call void @prism_rc_dec(i64 %t4)
  %t9 = icmp ne i64 %t7, 1
  br i1 %t9, label %b0, label %b1

b0:                                               ; preds = %entry
  call void @prism_rc_dec(i64 %t7)
  %t12 = call i64 @prismap_1(i64 %t4, i64 21)
  call void @prism_rc_dec(i64 %t4)
  br label %b2

b1:                                               ; preds = %entry
  call void @prism_rc_dec(i64 %t7)
  %t15 = call i64 @prismap_1(i64 %t4, i64 41)
  call void @prism_rc_dec(i64 %t4)
  br label %b2

b2:                                               ; preds = %b1, %b0
  %t16 = phi i64 [ %t12, %b0 ], [ %t15, %b1 ]
  call void @prism_print_int(i64 %t16)
  call void @prism_rc_dec(i64 %t16)
  call void @prism_rc_dec(i64 0)
  call void @prism_print_nl()
  ret i64 0
}

; Function Attrs: nounwind
declare ptr @prism_alloc(i64) #0

; Function Attrs: nounwind
declare void @prism_rc_inc(i64) #0

; Function Attrs: nounwind
define i64 @prismap_1(i64 %_clos, i64 %_a0) #0 {
entry:
  %_cp = inttoptr i64 %_clos to ptr
  %_tp = getelementptr inbounds i8, ptr %_cp, i64 8
  %_tag = load i64, ptr %_tp, align 8
  switch i64 %_tag, label %_dead [
    i64 4180332117194187166, label %_lam4180332117194187166
  ]

_lam4180332117194187166:                          ; preds = %entry
  %_r4180332117194187166 = call i64 @prismlam_4180332117194187166(i64 %_a0)
  br label %_merge

_dead:                                            ; preds = %entry
  call void @prism_apply_error()
  unreachable

_merge:                                           ; preds = %_lam4180332117194187166
  %_result = phi i64 [ %_r4180332117194187166, %_lam4180332117194187166 ]
  ret i64 %_result
}

; Function Attrs: nounwind
declare void @prism_rc_dec(i64) #0

; Function Attrs: nounwind
declare void @prism_print_int(i64) #0

; Function Attrs: nounwind
declare void @prism_print_nl() #0

; Function Attrs: nounwind
define i64 @prismlam_4180332117194187166(i64 %_p0) #0 {
entry:
  ret i64 %_p0
}

; Function Attrs: nounwind
declare void @prism_apply_error() #0

attributes #0 = { nounwind }

== run ==
output: [10]
result: ()
