tests/snapshots/snapshots__pipeline@rankn_data_field.pr.snap
---
source: tests/snapshots.rs
expression: "normalize_pipeline_report(&prism::report(&src))"
input_file: tests/cases/rankn_data_field.pr
---
== tokens ==
VOpen Type UIdent("Wrap") Eq UIdent("Wrap") LParen Forall Ident("a") Dot LParen Ident("a") RParen Arrow Ident("a") RParen VSemi Fn Ident("useit") LParen Ident("w") Colon UIdent("Wrap") RParen Colon KwInt Eq VOpen Match Ident("w") Of VOpen UIdent("Wrap") LParen Ident("f") RParen FatArrow Ident("f") LParen Int(IntLit { value: 42, suffix: None }) RParen VClose VClose VSemi Fn Ident("main") LParen RParen Eq Ident("println") LParen Ident("useit") LParen UIdent("Wrap") LParen Lambda LParen Ident("x") RParen Arrow Ident("x") RParen RParen RParen VClose

== ast ==
Program {
    types: [
        DataDecl {
            name: "Wrap",
            params: [],
            param_kinds: [],
            ctors: [
                Ctor {
                    name: "Wrap",
                    args: [
                        Forall(
                            [
                                "a",
                            ],
                            Fun(
                                [
                                    Var(
                                        "a",
                                    ),
                                ],
                                Empty,
                                Var(
                                    "a",
                                ),
                            ),
                        ),
                    ],
                    fields: None,
                    span: 136..140,
                },
            ],
            deriving: [],
            newtype: false,
            span: 124..160,
        },
    ],
    effects: [],
    errors: [],
    aliases: [],
    classes: [],
    instances: [],
    fns: [
        Decl {
            name: "useit",
            params: [
                Param {
                    name: "w",
                    ty: Some(
                        Con(
                            "Wrap",
                            [],
                        ),
                    ),
                    borrow: false,
                    default: None,
                },
            ],
            ret: Some(
                Int,
            ),
            eff: None,
            constraints: [],
            body: Spanned {
                node: Match(
                    Spanned {
                        node: Var(
                            "w",
                        ),
                        span: 197..198,
                    },
                    [
                        Arm {
                            pat: Spanned {
                                node: Ctor(
                                    "Wrap",
                                    [
                                        Spanned {
                                            node: Var(
                                                "f",
                                            ),
                                            span: 211..212,
                                        },
                                    ],
                                ),
                                span: 206..213,
                            },
                            body: Spanned {
                                node: Call(
                                    Spanned {
                                        node: Var(
                                            "f",
                                        ),
                                        span: 217..218,
                                    },
                                    [
                                        Spanned {
                                            node: Int(
                                                IntLit {
                                                    value: 42,
                                                    suffix: None,
                                                },
                                            ),
                                            span: 219..221,
                                        },
                                    ],
                                ),
                                span: 217..222,
                            },
                        },
                    ],
                ),
                span: 191..222,
            },
            wheres: [],
            span: 162..222,
        },
        Decl {
            name: "main",
            params: [],
            ret: None,
            eff: None,
            constraints: [],
            body: Spanned {
                node: Call(
                    Spanned {
                        node: Var(
                            "println",
                        ),
                        span: 236..243,
                    },
                    [
                        Spanned {
                            node: Call(
                                Spanned {
                                    node: Var(
                                        "useit",
                                    ),
                                    span: 244..249,
                                },
                                [
                                    Spanned {
                                        node: Call(
                                            Spanned {
                                                node: Var(
                                                    "Wrap",
                                                ),
                                                span: 250..254,
                                            },
                                            [
                                                Spanned {
                                                    node: Lam(
                                                        [
                                                            Param {
                                                                name: "x",
                                                                ty: None,
                                                                borrow: false,
                                                                default: None,
                                                            },
                                                        ],
                                                        Spanned {
                                                            node: Var(
                                                                "x",
                                                            ),
                                                            span: 263..264,
                                                        },
                                                    ),
                                                    span: 255..264,
                                                },
                                            ],
                                        ),
                                        span: 250..265,
                                    },
                                ],
                            ),
                            span: 244..266,
                        },
                    ],
                ),
                span: 236..267,
            },
            wheres: [],
            span: 224..267,
        },
    ],
}

== types ==
useit : (Wrap) -> Int
main : () -> Unit ! {IO}

== core (cbpv) ==
fn useit(w) =
  return w to t@0
  case t@0 of
    Wrap(f) =>
      return 42 to t@1
      return f to t@2
      (force t@2)(t@1)
fn main() =
  return thunk { \x. return x } to t@3
  return Wrap(t@3) to t@4
  useit(t@4) to t@5
  print t@5 to t@6
  print_nl

== fbip (rc) ==
fn useit(w) =
  return w to t@0
  case t@0 of
    Wrap(f) =>
      return 42 to t@1
      return f to t@2
      dup t@2
      (force t@2)(t@1)
fn main() =
  return thunk { \x. return x } to t@3
  return Wrap(t@3) to t@4
  useit(t@4) to %rc0
  drop t@4
  return %rc0 to t@5
  print t@5 to t@6
  drop t@6
  print_nl

== llvm ==
; ModuleID = 'prism'
source_filename = "prism"

@prism_native_kont_table = constant [800 x i8] c"scheme  prism-core-hash-v2\0Abundle  6d017fe7175631ddafc2f44c654d4834568067f2b91ba857669bddfb275da0bd\0Acompiler  <version>\0Atarget  <target>\0Abackend  llvm\0Aflag  source-root  prism-core-hash-v2:6d017fe7175631ddafc2f44c654d4834568067f2b91ba857669bddfb275da0bd\0Aflag  stdlib-root  <stdlib-root>\0Aflag  opt  O1\0Aflag  passes  level-default\0Aflag  disabled  none\0Aflag  backend-opt  2\0Aflag  scheduler  cooperative\0Aflag  effect-tier  auto\0Aflag  reify  true\0Aflag  erasures  true\0Aflag  native-effects  true\0Aflag  trampoline  true\0Aflag  fuse  false\0Aflag  borrow-infer  true\0Aflag  rt-checks  false\0Aflag  native-kont-frames  false\0Afn      prismfn_main  08bbf0bc80f5ce0e6c7c0c4c613d80c08a3c69fdfddeef217b522c40ddcae7dd  main\0Afn      prismfn_useit  504269893e7af592b0c1b36d8897d58d699301f45c59571b1f525dc3a53af793  useit\0A\00", section ",.prism_kont", align 1
@prism_native_kont_state_map = constant [904 x i8] c"state-map 1\0Ascheme  prism-core-hash-v2\0Abundle  6d017fe7175631ddafc2f44c654d4834568067f2b91ba857669bddfb275da0bd\0Acompiler  <version>\0Atarget  <target>\0Abackend  llvm\0Aflag  source-root  prism-core-hash-v2:6d017fe7175631ddafc2f44c654d4834568067f2b91ba857669bddfb275da0bd\0Aflag  stdlib-root  <stdlib-root>\0Aflag  opt  O1\0Aflag  passes  level-default\0Aflag  disabled  none\0Aflag  backend-opt  2\0Aflag  scheduler  cooperative\0Aflag  effect-tier  auto\0Aflag  reify  true\0Aflag  erasures  true\0Aflag  native-effects  true\0Aflag  trampoline  true\0Aflag  fuse  false\0Aflag  borrow-infer  true\0Aflag  rt-checks  false\0Aflag  native-kont-frames  false\0Aslot-format prism-native-abi-word-v1\0Astate prismfn_main 08bbf0bc80f5ce0e6c7c0c4c613d80c08a3c69fdfddeef217b522c40ddcae7dd main arity 0 slots abi-word[]\0Astate prismfn_useit 504269893e7af592b0c1b36d8897d58d699301f45c59571b1f525dc3a53af793 useit arity 1 slots abi-word[arg0=%a0:word]\0A\00", section ",.prism_kont", align 1
@.kont_symbol0 = private constant [13 x i8] c"prismfn_main\00"
@.kont_hash0 = private constant [65 x i8] c"08bbf0bc80f5ce0e6c7c0c4c613d80c08a3c69fdfddeef217b522c40ddcae7dd\00"
@.kont_name0 = private constant [5 x i8] c"main\00"
@prism_native_kont_ptrs = constant [1 x { ptr, ptr, ptr, ptr }] [{ ptr, ptr, ptr, ptr } { ptr @prismfn_main, ptr @.kont_symbol0, ptr @.kont_hash0, ptr @.kont_name0 }], section ",.prism_kont", align 8
@prism_native_kont_ptrs_len = constant i64 1, section ",.prism_kont", align 8
@llvm.used = appending global [4 x ptr] [ptr @prism_native_kont_table, ptr @prism_native_kont_state_map, ptr @prism_native_kont_ptrs, ptr @prism_native_kont_ptrs_len], section ",llvm.metadata"

; Function Attrs: nounwind
define i64 @prismfn_main() #0 {
entry:
  %t1 = call ptr @prism_alloc(i64 0)
  %t2 = getelementptr inbounds i8, ptr %t1, i64 8
  store i64 4180332117194187166, ptr %t2, align 8
  %t4 = ptrtoint ptr %t1 to i64
  %t6 = call i64 @prismap_1(i64 %t4, i64 85)
  call void @prism_rc_dec(i64 %t4)
  call void @prism_print_int(i64 %t6)
  call void @prism_rc_dec(i64 %t6)
  call void @prism_rc_dec(i64 0)
  call void @prism_print_nl()
  ret i64 0
}

; Function Attrs: nounwind
declare ptr @prism_alloc(i64) #0

; Function Attrs: nounwind
define i64 @prismap_1(i64 %_clos, i64 %_a0) #0 {
entry:
  %_cp = inttoptr i64 %_clos to ptr
  %_tp = getelementptr inbounds i8, ptr %_cp, i64 8
  %_tag = load i64, ptr %_tp, align 8
  switch i64 %_tag, label %_dead [
    i64 4180332117194187166, label %_lam4180332117194187166
  ]

_lam4180332117194187166:                          ; preds = %entry
  %_r4180332117194187166 = call i64 @prismlam_4180332117194187166(i64 %_a0)
  br label %_merge

_dead:                                            ; preds = %entry
  call void @prism_apply_error()
  unreachable

_merge:                                           ; preds = %_lam4180332117194187166
  %_result = phi i64 [ %_r4180332117194187166, %_lam4180332117194187166 ]
  ret i64 %_result
}

; Function Attrs: nounwind
declare void @prism_rc_dec(i64) #0

; Function Attrs: nounwind
declare void @prism_print_int(i64) #0

; Function Attrs: nounwind
declare void @prism_print_nl() #0

; Function Attrs: nounwind
define i64 @prismlam_4180332117194187166(i64 %_p0) #0 {
entry:
  ret i64 %_p0
}

; Function Attrs: nounwind
declare void @prism_apply_error() #0

attributes #0 = { nounwind }

== run ==
output: [42]
result: ()
