tests/snapshots/snapshots__pipeline@rankn_effect_poly.pr.snap
---
source: tests/snapshots.rs
expression: "normalize_pipeline_report(&prism::report(&src))"
input_file: tests/cases/rankn_effect_poly.pr
---
== tokens ==
VOpen Fn Ident("apply_io") LParen Ident("g") Colon LParen KwInt RParen Arrow KwInt Bang LBrace UIdent("IO") RBrace RParen Colon KwInt Bang LBrace UIdent("IO") RBrace Eq Ident("g") LParen Int(IntLit { value: 1, suffix: None }) RParen VSemi Fn Ident("runEff") LParen Ident("k") Colon Forall Ident("e") Dot LParen KwInt RParen Arrow KwInt Bang LBrace Bar Ident("e") RBrace RParen Colon KwInt Bang LBrace UIdent("IO") RBrace Eq Ident("apply_io") LParen Ident("k") RParen VSemi Fn Ident("main") LParen RParen Eq Ident("println") LParen Ident("runEff") LParen Lambda LParen Ident("x") RParen Arrow Ident("x") Plus Int(IntLit { value: 41, suffix: None }) RParen RParen VClose

== ast ==
Program {
    types: [],
    effects: [],
    errors: [],
    aliases: [],
    classes: [],
    instances: [],
    fns: [
        Decl {
            name: "apply_io",
            params: [
                Param {
                    name: "g",
                    ty: Some(
                        Fun(
                            [
                                Int,
                            ],
                            Cons(
                                [
                                    EffLabel {
                                        name: "IO",
                                        args: [],
                                    },
                                ],
                                None,
                            ),
                            Int,
                        ),
                    ),
                    borrow: false,
                    default: None,
                },
            ],
            ret: Some(
                Int,
            ),
            eff: Some(
                [
                    EffLabel {
                        name: "IO",
                        args: [],
                    },
                ],
            ),
            constraints: [],
            body: Spanned {
                node: Call(
                    Spanned {
                        node: Var(
                            "g",
                        ),
                        span: 342..343,
                    },
                    [
                        Spanned {
                            node: Int(
                                IntLit {
                                    value: 1,
                                    suffix: None,
                                },
                            ),
                            span: 344..345,
                        },
                    ],
                ),
                span: 342..346,
            },
            wheres: [],
            span: 290..346,
        },
        Decl {
            name: "runEff",
            params: [
                Param {
                    name: "k",
                    ty: Some(
                        Forall(
                            [
                                "e",
                            ],
                            Fun(
                                [
                                    Int,
                                ],
                                Cons(
                                    [],
                                    Some(
                                        "e",
                                    ),
                                ),
                                Int,
                            ),
                        ),
                    ),
                    borrow: false,
                    default: None,
                },
            ],
            ret: Some(
                Int,
            ),
            eff: Some(
                [
                    EffLabel {
                        name: "IO",
                        args: [],
                    },
                ],
            ),
            constraints: [],
            body: Spanned {
                node: Call(
                    Spanned {
                        node: Var(
                            "apply_io",
                        ),
                        span: 409..417,
                    },
                    [
                        Spanned {
                            node: Var(
                                "k",
                            ),
                            span: 418..419,
                        },
                    ],
                ),
                span: 409..420,
            },
            wheres: [],
            span: 348..420,
        },
        Decl {
            name: "main",
            params: [],
            ret: None,
            eff: None,
            constraints: [],
            body: Spanned {
                node: Call(
                    Spanned {
                        node: Var(
                            "println",
                        ),
                        span: 434..441,
                    },
                    [
                        Spanned {
                            node: Call(
                                Spanned {
                                    node: Var(
                                        "runEff",
                                    ),
                                    span: 442..448,
                                },
                                [
                                    Spanned {
                                        node: Lam(
                                            [
                                                Param {
                                                    name: "x",
                                                    ty: None,
                                                    borrow: false,
                                                    default: None,
                                                },
                                            ],
                                            Spanned {
                                                node: Bin(
                                                    Add,
                                                    Spanned {
                                                        node: Var(
                                                            "x",
                                                        ),
                                                        span: 457..458,
                                                    },
                                                    Spanned {
                                                        node: Int(
                                                            IntLit {
                                                                value: 41,
                                                                suffix: None,
                                                            },
                                                        ),
                                                        span: 461..463,
                                                    },
                                                ),
                                                span: 457..463,
                                            },
                                        ),
                                        span: 449..463,
                                    },
                                ],
                            ),
                            span: 442..464,
                        },
                    ],
                ),
                span: 434..465,
            },
            wheres: [],
            span: 422..465,
        },
    ],
}

== types ==
apply_io : ((Int) -> Int ! {IO}) -> Int ! {IO}
runEff : (forall e. (Int) -> Int ! {e}) -> Int ! {IO}
main : () -> Unit ! {IO}

== core (cbpv) ==
fn apply_io(g) =
  return 1 to t@0
  return g to t@1
  (force t@1)(t@0)
fn runEff(k) =
  return k to t@2
  apply_io(t@2)
fn main() =
  thunk { \x.
    return x to t@3
    return 41 to t@4
    t@3 + t@4
  } to t@5
  runEff(t@5) to t@6
  print t@6 to t@7
  print_nl

== fbip (rc) ==
fn apply_io(g) =
  return 1 to t@0
  return g to t@1
  (force t@1)(t@0)
fn runEff(k) =
  return k to t@2
  apply_io(t@2)
fn main() =
  thunk { \x.
    return x to t@3
    return 41 to t@4
    t@3 + t@4
  } to t@5
  runEff(t@5) to t@6
  print t@6 to t@7
  drop t@7
  print_nl

== llvm ==
; ModuleID = 'prism'
source_filename = "prism"

@prism_native_kont_table = constant [903 x i8] c"scheme  prism-core-hash-v2\0Abundle  753a1f9c73ae4b711764b2f2d7ef1001c08a1030e9c77c65d038df10780357c5\0Acompiler  <version>\0Atarget  <target>\0Abackend  llvm\0Aflag  source-root  prism-core-hash-v2:753a1f9c73ae4b711764b2f2d7ef1001c08a1030e9c77c65d038df10780357c5\0Aflag  stdlib-root  <stdlib-root>\0Aflag  opt  O1\0Aflag  passes  level-default\0Aflag  disabled  none\0Aflag  backend-opt  2\0Aflag  scheduler  cooperative\0Aflag  effect-tier  auto\0Aflag  reify  true\0Aflag  erasures  true\0Aflag  native-effects  true\0Aflag  trampoline  true\0Aflag  fuse  false\0Aflag  borrow-infer  true\0Aflag  rt-checks  false\0Aflag  native-kont-frames  false\0Afn      prismfn_apply_io  583cce27692a6243a6e93c99e4c31206ec5b5961058d94a9204c1f402795ead0  apply_io\0Afn      prismfn_main  c83cde4a76c3e307774a1fbc3cc61c9b1739cfe834fcd8cf3e7c5ad8ab206985  main\0Afn      prismfn_runEff  4bf009054a50cffa1dfef8c85fbc02c6f63bc723b24a387c951f32d4faa4cd66  runEff\0A\00", section ",.prism_kont", align 1
@prism_native_kont_state_map = constant [1041 x i8] c"state-map 1\0Ascheme  prism-core-hash-v2\0Abundle  753a1f9c73ae4b711764b2f2d7ef1001c08a1030e9c77c65d038df10780357c5\0Acompiler  <version>\0Atarget  <target>\0Abackend  llvm\0Aflag  source-root  prism-core-hash-v2:753a1f9c73ae4b711764b2f2d7ef1001c08a1030e9c77c65d038df10780357c5\0Aflag  stdlib-root  <stdlib-root>\0Aflag  opt  O1\0Aflag  passes  level-default\0Aflag  disabled  none\0Aflag  backend-opt  2\0Aflag  scheduler  cooperative\0Aflag  effect-tier  auto\0Aflag  reify  true\0Aflag  erasures  true\0Aflag  native-effects  true\0Aflag  trampoline  true\0Aflag  fuse  false\0Aflag  borrow-infer  true\0Aflag  rt-checks  false\0Aflag  native-kont-frames  false\0Aslot-format prism-native-abi-word-v1\0Astate prismfn_apply_io 583cce27692a6243a6e93c99e4c31206ec5b5961058d94a9204c1f402795ead0 apply_io arity 1 slots abi-word[arg0=%a0:word]\0Astate prismfn_main c83cde4a76c3e307774a1fbc3cc61c9b1739cfe834fcd8cf3e7c5ad8ab206985 main arity 0 slots abi-word[]\0Astate prismfn_runEff 4bf009054a50cffa1dfef8c85fbc02c6f63bc723b24a387c951f32d4faa4cd66 runEff arity 1 slots abi-word[arg0=%a0:word]\0A\00", section ",.prism_kont", align 1
@.kont_symbol1 = private constant [13 x i8] c"prismfn_main\00"
@.kont_hash1 = private constant [65 x i8] c"c83cde4a76c3e307774a1fbc3cc61c9b1739cfe834fcd8cf3e7c5ad8ab206985\00"
@.kont_name1 = private constant [5 x i8] c"main\00"
@prism_native_kont_ptrs = constant [1 x { ptr, ptr, ptr, ptr }] [{ ptr, ptr, ptr, ptr } { ptr @prismfn_main, ptr @.kont_symbol1, ptr @.kont_hash1, ptr @.kont_name1 }], section ",.prism_kont", align 8
@prism_native_kont_ptrs_len = constant i64 1, section ",.prism_kont", align 8
@llvm.used = appending global [4 x ptr] [ptr @prism_native_kont_table, ptr @prism_native_kont_state_map, ptr @prism_native_kont_ptrs, ptr @prism_native_kont_ptrs_len], section ",llvm.metadata"

; Function Attrs: nounwind
define i64 @prismfn_main() #0 {
entry:
  %t1 = call ptr @prism_alloc(i64 0)
  %t2 = getelementptr inbounds i8, ptr %t1, i64 8
  store i64 4180332117194187166, ptr %t2, align 8
  %t4 = ptrtoint ptr %t1 to i64
  %t6 = call i64 @prismap_1(i64 %t4, i64 3)
  call void @prism_rc_dec(i64 %t4)
  call void @prism_print_int(i64 %t6)
  call void @prism_rc_dec(i64 %t6)
  call void @prism_rc_dec(i64 0)
  call void @prism_print_nl()
  ret i64 0
}

; Function Attrs: nounwind
declare ptr @prism_alloc(i64) #0

; Function Attrs: nounwind
define i64 @prismap_1(i64 %_clos, i64 %_a0) #0 {
entry:
  %_cp = inttoptr i64 %_clos to ptr
  %_tp = getelementptr inbounds i8, ptr %_cp, i64 8
  %_tag = load i64, ptr %_tp, align 8
  switch i64 %_tag, label %_dead [
    i64 4180332117194187166, label %_lam4180332117194187166
  ]

_lam4180332117194187166:                          ; preds = %entry
  %_r4180332117194187166 = call i64 @prismlam_4180332117194187166(i64 %_a0)
  br label %_merge

_dead:                                            ; preds = %entry
  call void @prism_apply_error()
  unreachable

_merge:                                           ; preds = %_lam4180332117194187166
  %_result = phi i64 [ %_r4180332117194187166, %_lam4180332117194187166 ]
  ret i64 %_result
}

; Function Attrs: nounwind
declare void @prism_rc_dec(i64) #0

; Function Attrs: nounwind
declare void @prism_print_int(i64) #0

; Function Attrs: nounwind
declare void @prism_print_nl() #0

; Function Attrs: nounwind
define i64 @prismlam_4180332117194187166(i64 %_p0) #0 {
entry:
  %t1 = and i64 %_p0, 83
  %t3 = and i64 %t1, 1
  %t4 = icmp eq i64 %t3, 1
  br i1 %t4, label %b0, label %b1

b0:                                               ; preds = %entry
  %t6 = ashr i64 %_p0, 1
  %t9 = add i64 %t6, 41
  %t11 = shl i64 %t9, 1
  %t12 = ashr i64 %t11, 1
  %t13 = icmp eq i64 %t12, %t9
  br i1 %t13, label %b3, label %b1

b1:                                               ; preds = %b0, %entry
  %t15 = call i64 @prism_rt_int_add(i64 %_p0, i64 83)
  br label %b2

b3:                                               ; preds = %b0
  %t14 = or i64 %t11, 1
  br label %b2

b2:                                               ; preds = %b1, %b3
  %t16 = phi i64 [ %t14, %b3 ], [ %t15, %b1 ]
  call void @prism_rc_dec(i64 %_p0)
  call void @prism_rc_dec(i64 83)
  ret i64 %t16
}

; Function Attrs: nounwind
declare i64 @prism_rt_int_add(i64, i64) #0

; Function Attrs: nounwind
declare void @prism_apply_error() #0

attributes #0 = { nounwind }

== run ==
output: [42]
result: ()
